[fix] game lag on mobile

--- a/src/nginx/html/styles/game.css
+++ b/src/nginx/html/styles/game.css
@@ -344,9 +344,9 @@
 	width: 100vw;
 	align-items: center;
 	justify-content: space-around;
-	touch-action: none;
+	touch-action: manipulation;
 	* {
-		touch-action: none;
+		touch-action: manipulation;
 	}
 }
 
